<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10sp"
    android:layout_marginTop="10sp"
    android:layout_marginEnd="10sp"
    app:cardCornerRadius="10sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/id_constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEFFE9"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_vin"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_vin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="WWWWWWWWWWWWWW"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="64dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/plate_no"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tv_platnum"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="GJ 11 AS 8821"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/company"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/tv_vin" />

        <TextView
            android:id="@+id/tv_companyname"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="Maruti Suzuki"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="196dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/model"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/type"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="TextView"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <TextView
            android:id="@+id/tv_model"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/tv_companyname"
            app:layout_constraintTop_toBottomOf="@+id/tv_companyname" />

        <ImageButton
            android:id="@+id/btnDel"
            android:layout_width="37dp"
            android:layout_height="21dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/delete_btn_img" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>